# live_hackthon

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md
backend-api/: .dockerignore  .env.example  Dockerfile  Dockerfile.lambda  Dockerfile.render  Dockerfile.render-lambda  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend-api/analysis/: __init__.py  annotations.py  bits.py  emotion.py  highlights.py  highlights_llm.py  keywords.py  refine.py  (+2 more)
cli/: README.md  pyproject.toml
cli/crestcut/: __init__.py  __main__.py  api.py  auth.py  cli.py  config.py  context.py  errors.py  output.py  poll.py  transport.py  upload.py  views.py
cli/crestcut/commands/: __init__.py  analyze.py  annotate.py  artifact.py  compose.py  describe.py  flow.py  highlights.py  login.py  project.py  render.py  serve.py  timeline.py  upload.py
cli/tests/: test_cli.py
contracts/: README.md  annotations.v1.schema.json  artifact.v1.schema.json  asd_result.v1.schema.json  attributed_transcript.v1.schema.json  chatlog.v1.schema.json  effects.v1.schema.json  highlights.v1.schema.json  moderation.v1.schema.json  openapi.attribution.yaml  openapi.yaml  people.v1.schema.json  render_spec.v1.schema.json  subtitle.v1.schema.json  timeline.v1.schema.json  transcript.v1.schema.json
docs/: M2-handoff.md  aws-infra.md  demand.md
frontend-web/: .env.example  .gitignore  README.md  ROADMAP.md  next.config.js  package-lock.json  package.json  types.ts
infra/: README.md  ROADMAP.md  deploy.sh
scripts/: loadtest_batch_upload.py  provision_test_users.sh  redrive_dlq.sh
(+223 files in other folders)
